static/css/about.css
.about{
    margin-top:2em;
    padding-left: 5vw;
    padding-right: 5vw;
    padding-bottom:5rem;
    display:flex;
    flex-direction:column;
    gap:3em;
}



.carousel{
    width:50%;
    position:relative;
    overflow-y:hidden;
}

.carousel-item{
    width:100%;
    height:100%;
    position:absolute;
    display:flex;
    flex-direction:column;
    justify-content:center;
    align-items:center;
    opacity: 0;
    transition: opacity 0.5s ease-in-out;
}

.carousel-item>img{
    width:100%;
    height:100%;
    object-fit:contain;

}

.active{
    opacity:1;
}

#about-video{
    width:60%;
    object-fit:contain;
}

